--- a/src/index.html
+++ b/src/index.html
@@ -107,7 +107,7 @@
                         <a href="./profile.html" class="block text-center w-full bg-slate-500 text-white text-sm hover:bg-slate-700 px-4 py-1">Profile</a>
                     </div>
                     <form class="my-3 user-form" action="" method="">
-                        <input type="text" name="username" id="username" class="block w-full border border-gray-300 px-4 py-2 focus:outline-none" placeholder="User Name" required>
+                        <input type="text" name="username" id="username" class="block w-full border border-gray-300 px-4 py-2 focus:outline-none" placeholder="User Name" required readonly>
                         <span class="text-gray-600 text-sm msg"></span>
                     </form>
 
